--- a/pages/admin/pengujian.html
+++ b/pages/admin/pengujian.html
@@ -65,6 +65,11 @@
                 >
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="./kelola-pertanyaan.html"
+                  >Pertanyaan</a
+                >
+              </li>
+              <li class="nav-item">
                 <a class="nav-link active" href="./pengujian.html">Pengujian</a>
               </li>
               <li class="nav-item">
@@ -82,11 +87,11 @@
     <main>
       <section id="hero" class="hero section-bg">
         <div class="content" data-aos="fade-up">
-          <h1 class="title">
-            KELOLA PERTANYAAN UNTUK MENILAI TINGKAT KEPUASAN PASIEN
-          </h1>
-          <a href="./pertanyaan/kelola-pertanyaan.html" class="btn btn-primary"
-            >Kelola Pertanyaan</a
+          <h2 class="title">
+            LAKUKAN PENGUJIAN UNTUK MENILAI TINGKAT KEPUASAN PASIEN
+          </h2>
+          <a href="./pengujian/table-pengujian.html" class="btn btn-primary"
+            >Lakukan Pengujian</a
           >
         </div>
         <div class="card-slider">
