--- a/pages/admin/pengujian/table-pengujian.html
+++ b/pages/admin/pengujian/table-pengujian.html
@@ -40,7 +40,7 @@
       <section id="print" class="print">
         <div class="content" data-aos="fade-up">
           <h2 class="title">
-            Total Responden Pasien Laki-laki di RSUD Arosuka
+            Pengujian Puas / Tidak Puas Pasien di RSUD Arosuka
           </h2>
 
           <div class="table-responsive">
@@ -55,10 +55,17 @@
             <table class="table table-hover table-bordered results">
               <thead>
                 <tr>
-                  <th rowspan="2">#</th>
-                  <th rowspan="2" class="col-md-2 col-xs-2">Nama Lengkap</th>
+                  <th rowspan="3">#</th>
+                  <th rowspan="3" class="col-md-1 col-xs-1">Tanggal</th>
+                  <th rowspan="3" class="col-md-1 col-xs-1">Nama Lengkap</th>
                   <th colspan="10" class="col-md-8 col-xs-8">Pertanyaan</th>
-                  <th rowspan="2" class="col-md-2 col-xs-2">Kepuasan</th>
+                  <th rowspan="3" class="col-md-1 col-xs-1">Kepuasan</th>
+                  <th rowspan="3" class="col-md-1 col-xs-1">Aksi</th>
+                </tr>
+                <tr>
+                  <th colspan="4">Keandalan (Reliability)</th>
+                  <th colspan="4">Daya Tanggap (Responsiveness)</th>
+                  <th colspan="2">Jaminan (Assurance)</th>
                 </tr>
                 <tr>
                   <th>1</th>
@@ -81,7 +88,8 @@
               <tbody>
                 <tr>
                   <th scope="row">1</th>
-                  <td class="col-md-2 col-xs-2">Alif Suryadi</td>
+                  <td class="col-md-1 col-xs-1">12-02-2024</td>
+                  <td class="col-md-1 col-xs-1">Alif Suryadi</td>
                   <td>80</td>
                   <td>90</td>
                   <td>85</td>
@@ -92,27 +100,39 @@
                   <td>100</td>
                   <td>75</td>
                   <td>95</td>
-                  <td class="col-md-2 col-xs-2">Puas</td>
+                  <td class="col-md-1 col-xs-1">Puas</td>
+                  <td class="col-md-1 col-xs-1 aksi">
+                    <a href="./hasil-pengujian.html" class="btn btn-uji"
+                      >Detail</a
+                    >
+                  </td>
                 </tr>
 
                 <tr>
                   <th scope="row">2</th>
-                  <td class="col-md-2 col-xs-2">John Doe</td>
-                  <td>20</td>
-                  <td>40</td>
-                  <td>45</td>
-                  <td>50</td>
+                  <td class="col-md-1 col-xs-1">12-02-2024</td>
+                  <td class="col-md-1 col-xs-1">John Doe</td>
+                  <td>80</td>
+                  <td>90</td>
+                  <td>85</td>
+                  <td>100</td>
                   <td>75</td>
+                  <td>95</td>
+                  <td>85</td>
+                  <td>100</td>
                   <td>75</td>
-                  <td>45</td>
-                  <td>50</td>
-                  <td>75</td>
-                  <td>75</td>
-                  <td class="col-md-2 col-xs-2">Tidak Puas</td>
+                  <td>95</td>
+                  <td class="col-md-1 col-xs-1">Puas</td>
+                  <td class="col-md-1 col-xs-1 aksi">
+                    <a href="./hasil-pengujian.html" class="btn btn-uji"
+                      >Detail</a
+                    >
+                  </td>
                 </tr>
                 <tr>
                   <th scope="row">3</th>
-                  <td class="col-md-2 col-xs-2">Jane Smith</td>
+                  <td class="col-md-1 col-xs-1">10-02-2024</td>
+                  <td class="col-md-1 col-xs-1">Jane Smith</td>
                   <td>80</td>
                   <td>90</td>
                   <td>85</td>
@@ -123,46 +143,82 @@
                   <td>100</td>
                   <td>100</td>
                   <td>100</td>
-                  <td class="col-md-2 col-xs-2">Puas</td>
+                  <td class="col-md-1 col-xs-1">Puas</td>
+                  <td class="col-md-1 col-xs-1 aksi">
+                    <a href="./hasil-pengujian.html" class="btn btn-uji"
+                      >Detail</a
+                    >
+                  </td>
                 </tr>
                 <tr>
                   <th scope="row">4</th>
-                  <td class="col-md-2 col-xs-2">Michael Johnson</td>
-                  <td>90</td>
-                  <td>90</td>
-                  <td>100</td>
-                  <td>80</td>
+                  <td class="col-md-1 col-xs-1">09-02-2024</td>
+                  <td class="col-md-1 col-xs-1">Michael Johnson</td>
+                  <td>40</td>
+                  <td>30</td>
+                  <td>50</td>
+                  <td>20</td>
+                  <td>25</td>
+                  <td>35</td>
+                  <td>50</td>
+                  <td>60</td>
+                  <td>15</td>
+                  <td>45</td>
+                  <td class="col-md-1 col-xs-1">Tidak Puas</td>
+                  <td class="col-md-1 col-xs-1 aksi">
+                    <a href="./hasil-pengujian.html" class="btn btn-uji"
+                      >Detail</a
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row">5</th>
+                  <td class="col-md-1 col-xs-1">12-02-2024</td>
+                  <td class="col-md-1 col-xs-1">Sarah Lee</td>
+                  <td>20</td>
+                  <td>30</td>
+                  <td>55</td>
+                  <td>20</td>
                   <td>75</td>
-                  <td>95</td>
-                  <td>100</td>
-                  <td>80</td>
+                  <td>65</td>
+                  <td>55</td>
+                  <td>40</td>
                   <td>75</td>
-                  <td>95</td>
-                  <td class="col-md-2 col-xs-2">Puas</td>
+                  <td>35</td>
+                  <td class="col-md-1 col-xs-1">Tidak Puas</td>
+                  <td class="col-md-1 col-xs-1 aksi">
+                    <a href="./hasil-pengujian.html" class="btn btn-uji"
+                      >Detail</a
+                    >
+                  </td>
                 </tr>
                 <tr>
                   <th scope="row">6</th>
-                  <td class="col-md-2 col-xs-2">David Brown</td>
+                  <td class="col-md-1 col-xs-1">12-02-2024</td>
+                  <td class="col-md-1 col-xs-1">David Brown</td>
                   <td>80</td>
-                  <td>70</td>
-                  <td>45</td>
-                  <td>50</td>
-                  <td>40</td>
-                  <td>40</td>
-                  <td>45</td>
-                  <td>50</td>
-                  <td>40</td>
-                  <td>40</td>
-                  <td class="col-md-2 col-xs-2">Tidak Puas</td>
+                  <td>90</td>
+                  <td>85</td>
+                  <td>90</td>
+                  <td>90</td>
+                  <td>80</td>
+                  <td>85</td>
+                  <td>90</td>
+                  <td>90</td>
+                  <td>80</td>
+                  <td class="col-md-1 col-xs-1">Puas</td>
+                  <td class="col-md-1 col-xs-1 aksi">
+                    <a href="./hasil-pengujian.html" class="btn btn-uji"
+                      >Detail</a
+                    >
+                  </td>
                 </tr>
               </tbody>
             </table>
           </div>
           <div class="row">
             <div class="col-12 d-flex justify-content-end">
-              <a href="../hasil-kuesioner.html" class="btn btn-primary"
-                >Kembali</a
-              >
+              <a href="../pengujian.html" class="btn btn-primary">Kembali</a>
               <a href="" class="btn btn-secondary" id="cetak">Cetak</a>
             </div>
           </div>
