--- a/pages/admin/pertanyaan/kelola-pertanyaan.html
+++ b/pages/admin/pertanyaan/kelola-pertanyaan.html
@@ -62,16 +62,20 @@
                       <thead>
                         <tr>
                           <th>#</th>
-                          <th class="col-md-10 col-xs-10">Pertanyaan</th>
+                          <th class="col-md-8 col-xs-8">Pertanyaan</th>
+                          <th class="col-md-2 col-xs-2">Kategori</th>
                           <th class="col-md-2 col-xs-2">Aksi</th>
                         </tr>
                       </thead>
                       <tbody>
                         <tr>
                           <th scope="row">1</th>
-                          <td class="col-md-10 col-xs-10">
+                          <td class="col-md-8 col-xs-8">
                             Seberapa puas Anda dengan kualitas pelayanan yang
                             diberikan?
+                          </td>
+                          <td class="col-md-2 col-xs-2">
+                            Keandalan (Reliability)
                           </td>
                           <td class="col-md-2 col-xs-2 aksi">
                             <a href="" class="btn btn-delete">Hapus</a>
@@ -84,9 +88,12 @@
                         </tr>
                         <tr>
                           <th scope="row">2</th>
-                          <td class="col-md-10 col-xs-10">
+                          <td class="col-md-8 col-xs-8">
                             Bagaimana penilaian Anda terhadap kecepatan respons
                             tim kami dalam menanggapi kebutuhan Anda?
+                          </td>
+                          <td class="col-md-2 col-xs-2">
+                            Keandalan (Reliability)
                           </td>
                           <td class="col-md-2 col-xs-2 aksi">
                             <a href="" class="btn btn-delete">Hapus</a>
@@ -99,10 +106,13 @@
                         </tr>
                         <tr>
                           <th scope="row">3</th>
-                          <td class="col-md-10 col-xs-10">
+                          <td class="col-md-8 col-xs-8">
                             Apakah Anda puas dengan ketersediaan fasilitas,
                             layanan tambahan, dan peralatan pendukung yang kami
                             sediakan untuk mendukung pengalaman Anda?
+                          </td>
+                          <td class="col-md-2 col-xs-2">
+                            Keandalan (Reliability)
                           </td>
                           <td class="col-md-2 col-xs-2 aksi">
                             <a href="" class="btn btn-delete">Hapus</a>
@@ -115,9 +125,12 @@
                         </tr>
                         <tr>
                           <th scope="row">4</th>
-                          <td class="col-md-10 col-xs-10">
+                          <td class="col-md-8 col-xs-8">
                             Apakah Anda puas dengan ketersediaan fasilitas dan
                             peralatan yang kami sediakan?
+                          </td>
+                          <td class="col-md-2 col-xs-2">
+                            Keandalan (Reliability)
                           </td>
                           <td class="col-md-2 col-xs-2 aksi">
                             <a href="" class="btn btn-delete">Hapus</a>
@@ -130,10 +143,13 @@
                         </tr>
                         <tr>
                           <th scope="row">5</th>
-                          <td class="col-md-10 col-xs-10">
+                          <td class="col-md-8 col-xs-8">
                             Bagaimana penilaian Anda terhadap kecepatan respons
                             tim kami dalam menanggapi kebutuhan, pertanyaan,
                             atau keluhan Anda?
+                          </td>
+                          <td class="col-md-2 col-xs-2">
+                            Daya Tanggap (Responsiveness)
                           </td>
                           <td class="col-md-2 col-xs-2 aksi">
                             <a href="" class="btn btn-delete">Hapus</a>
@@ -146,11 +162,84 @@
                         </tr>
                         <tr>
                           <th scope="row">6</th>
-                          <td class="col-md-10 col-xs-10">
+                          <td class="col-md-8 col-xs-8">
                             Apakah Anda merasa diperlakukan dengan ramah, sopan,
                             dan menghargai oleh staf kami selama berinteraksi
                             dengan layanan atau produk kami?
                           </td>
+                          <td class="col-md-2 col-xs-2">
+                            Daya Tanggap (Responsiveness)
+                          </td>
+                          <td class="col-md-2 col-xs-2 aksi">
+                            <a href="" class="btn btn-delete">Hapus</a>
+                            <a
+                              href="./edit-pertanyaan.html"
+                              class="btn btn-edit"
+                              >Edit</a
+                            >
+                          </td>
+                        </tr>
+                        <tr>
+                          <th scope="row">7</th>
+                          <td class="col-md-8 col-xs-8">
+                            Apakah Anda merasa bahwa kebutuhan dan preferensi
+                            pasien diprioritaskan dengan baik?
+                          </td>
+                          <td class="col-md-2 col-xs-2">
+                            Daya Tanggap (Responsiveness)
+                          </td>
+                          <td class="col-md-2 col-xs-2 aksi">
+                            <a href="" class="btn btn-delete">Hapus</a>
+                            <a
+                              href="./edit-pertanyaan.html"
+                              class="btn btn-edit"
+                              >Edit</a
+                            >
+                          </td>
+                        </tr>
+                        <tr>
+                          <th scope="row">8</th>
+                          <td class="col-md-8 col-xs-8">
+                            Bagaimana tingkat kepuasan Anda terhadap
+                            ketersediaan fasilitas dan peralatan medis di RSUD
+                            Arosuka?
+                          </td>
+                          <td class="col-md-2 col-xs-2">
+                            Daya Tanggap (Responsiveness)
+                          </td>
+                          <td class="col-md-2 col-xs-2 aksi">
+                            <a href="" class="btn btn-delete">Hapus</a>
+                            <a
+                              href="./edit-pertanyaan.html"
+                              class="btn btn-edit"
+                              >Edit</a
+                            >
+                          </td>
+                        </tr>
+                        <tr>
+                          <th scope="row">9</th>
+                          <td class="col-md-8 col-xs-8">
+                            Seberapa baik Anda merasa diperlakukan oleh staf
+                            administratif di RSUD Arosuka?
+                          </td>
+                          <td class="col-md-2 col-xs-2">Jaminan (Assurance)</td>
+                          <td class="col-md-2 col-xs-2 aksi">
+                            <a href="" class="btn btn-delete">Hapus</a>
+                            <a
+                              href="./edit-pertanyaan.html"
+                              class="btn btn-edit"
+                              >Edit</a
+                            >
+                          </td>
+                        </tr>
+                        <tr>
+                          <th scope="row">10</th>
+                          <td class="col-md-8 col-xs-8">
+                            Apakah Anda merasa bahwa Anda mendapatkan nilai yang
+                            sepadan dengan biaya perawatan yang Anda terima di
+                            RSUD Arosuka?
+                          </td>
+                          <td class="col-md-2 col-xs-2">Jaminan (Assurance)</td>
                           <td class="col-md-2 col-xs-2 aksi">
                             <a href="" class="btn btn-delete">Hapus</a>
                             <a
@@ -167,7 +256,10 @@
               </div>
 
               <div class="button">
-                <a href="../pengujian.html" class="btn btn-secondary" id="prev"
+                <a
+                  href="../kelola-pertanyaan.html"
+                  class="btn btn-secondary"
+                  id="prev"
                   >Kembali</a
                 >
               </div>
