--- a/pages/admin/pertanyaan/tambah-pertanyaan.html
+++ b/pages/admin/pertanyaan/tambah-pertanyaan.html
@@ -58,6 +58,25 @@
                         rows="5"
                       ></textarea>
                     </div>
+                    <div class="form-group">
+                      <label for="kategori" class="mb-2"
+                        >Kategori Pertanyaan</label
+                      >
+                      <select class="form-select" id="kategori" required>
+                        <option value="" disabled selected>
+                          -- Pilih Kategori Pertanyaan --
+                        </option>
+                        <option value="Keandalan  (Reliability)">
+                          Keandalan (Reliability)
+                        </option>
+                        <option value="Daya Tanggap (Responsiveness)">
+                          Daya Tanggap (Responsiveness)
+                        </option>
+                        <option value="Jaminan (Assurance)">
+                          Jaminan (Assurance)
+                        </option>
+                      </select>
+                    </div>
                   </div>
                 </div>
 
