--- a/pages/admin/print/total-responden.html
+++ b/pages/admin/print/total-responden.html
@@ -126,6 +126,26 @@
                     Jl. Mawar No. 10, Kota Padang, Sumatera Barat
                   </td>
                 </tr>
+                <tr>
+                  <th scope="row">7</th>
+                  <td class="col-md-2 col-xs-2">Udin kun</td>
+                  <td class="col-md-2 col-xs-2">Dosen</td>
+                  <td class="col-md-1 col-xs-1">30</td>
+                  <td class="col-md-2 col-xs-2">Laki-laki</td>
+                  <td class="col-md-5 col-xs-5">
+                    Jl. Mawar No. 12, Kota Padang, Sumatera Barat
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row">8</th>
+                  <td class="col-md-2 col-xs-2">Daniel Brown</td>
+                  <td class="col-md-2 col-xs-2">Pegawai Kantor</td>
+                  <td class="col-md-1 col-xs-1">25</td>
+                  <td class="col-md-2 col-xs-2">Laki-laki</td>
+                  <td class="col-md-5 col-xs-5">
+                    Jl. Mawar No. 3, Kota Padang, Sumatera Barat
+                  </td>
+                </tr>
               </tbody>
             </table>
           </div>
