--- a/pages/kuesioner/pertanyaan.html
+++ b/pages/kuesioner/pertanyaan.html
@@ -59,6 +59,15 @@
                       Tolong isi pertanyaan dengan jujur dan tanpa paksaan
                       siapapun
                     </p>
+                    <div class="category-question">
+                      <div class="d-flex">
+                        <hr class="my-auto flex-grow-1" />
+                        <h4 class="elementor-divider px-4">
+                          Keandalan (Reliability)
+                        </h4>
+                        <hr class="my-auto flex-grow-1" />
+                      </div>
+                    </div>
                     <div class="question-container">
                       <div class="question">
                         <div class="question-no">1.</div>
@@ -153,6 +162,15 @@
                       />
                       <br />
                     </div>
+                    <div class="category-question">
+                      <div class="d-flex">
+                        <hr class="my-auto flex-grow-1" />
+                        <h4 class="elementor-divider px-4">
+                          Daya Tanggap (Responsiveness)
+                        </h4>
+                        <hr class="my-auto flex-grow-1" />
+                      </div>
+                    </div>
                     <div class="question-container">
                       <div class="question">
                         <div class="question-no">5.</div>
@@ -184,6 +202,108 @@
                           Apakah Anda merasa diperlakukan dengan ramah, sopan,
                           dan menghargai oleh staf kami selama berinteraksi
                           dengan layanan atau produk kami?
+                        </div>
+                      </div>
+                      <p class="answer">Jawaban anda : <span>50</span></p>
+                      <!-- Slider -->
+                      <div class="bantuan">
+                        <span>0</span>
+                        <span>100</span>
+                      </div>
+                      <input
+                        class="answer-question"
+                        type="range"
+                        min="0"
+                        max="100"
+                        step="0"
+                      />
+                      <br />
+                    </div>
+                    <div class="question-container">
+                      <div class="question">
+                        <div class="question-no">7.</div>
+                        <div class="question-text">
+                          Apakah Anda merasa bahwa kebutuhan dan preferensi
+                          pasien diprioritaskan dengan baik?
+                        </div>
+                      </div>
+                      <p class="answer">Jawaban anda : <span>50</span></p>
+                      <!-- Slider -->
+                      <div class="bantuan">
+                        <span>0</span>
+                        <span>100</span>
+                      </div>
+                      <input
+                        class="answer-question"
+                        type="range"
+                        min="0"
+                        max="100"
+                        step="0"
+                      />
+                      <br />
+                    </div>
+                    <div class="question-container">
+                      <div class="question">
+                        <div class="question-no">8.</div>
+                        <div class="question-text">
+                          Bagaimana tingkat kepuasan Anda terhadap ketersediaan
+                          fasilitas dan peralatan medis di RSUD Arosuka?
+                        </div>
+                      </div>
+                      <p class="answer">Jawaban anda : <span>50</span></p>
+                      <!-- Slider -->
+                      <div class="bantuan">
+                        <span>0</span>
+                        <span>100</span>
+                      </div>
+                      <input
+                        class="answer-question"
+                        type="range"
+                        min="0"
+                        max="100"
+                        step="0"
+                      />
+                      <br />
+                    </div>
+                    <div class="category-question">
+                      <div class="d-flex">
+                        <hr class="my-auto flex-grow-1" />
+                        <h4 class="elementor-divider px-4">
+                          Jaminan (Assurance)
+                        </h4>
+                        <hr class="my-auto flex-grow-1" />
+                      </div>
+                    </div>
+                    <div class="question-container">
+                      <div class="question">
+                        <div class="question-no">9.</div>
+                        <div class="question-text">
+                          Seberapa baik Anda merasa diperlakukan oleh staf
+                          administratif di RSUD Arosuka?
+                        </div>
+                      </div>
+                      <p class="answer">Jawaban anda : <span>50</span></p>
+                      <!-- Slider -->
+                      <div class="bantuan">
+                        <span>0</span>
+                        <span>100</span>
+                      </div>
+                      <input
+                        class="answer-question"
+                        type="range"
+                        min="0"
+                        max="100"
+                        step="0"
+                      />
+                      <br />
+                    </div>
+                    <div class="question-container">
+                      <div class="question">
+                        <div class="question-no">10.</div>
+                        <div class="question-text">
+                          Apakah Anda merasa bahwa Anda mendapatkan nilai yang
+                          sepadan dengan biaya perawatan yang Anda terima di
+                          RSUD Arosuka?
                         </div>
                       </div>
                       <p class="answer">Jawaban anda : <span>50</span></p>
