--- a/pages/admin/kelola-pertanyaan.html
+++ b/pages/admin/kelola-pertanyaan.html
@@ -16,7 +16,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="language" content="Indonesia" />
 
-    <title>Kuesioner</title>
+    <title>Pengujian - Kuesioner</title>
 
     <link href="../../assets/images/favicon/favicon.ico" rel="icon" />
     <link
@@ -57,7 +57,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" href="./index.html">Beranda</a>
+                <a class="nav-link" href="./index.html">Beranda</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./hasil-kuesioner.html"
@@ -65,7 +65,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./kelola-pertanyaan.html"
+                <a class="nav-link active" href="./kelola-pertanyaan.html"
                   >Pertanyaan</a
                 >
               </li>
@@ -87,8 +87,12 @@
     <main>
       <section id="hero" class="hero section-bg">
         <div class="content" data-aos="fade-up">
-          <h1 class="title">PENILAIAN TINGKAT KEPUASAN PASIEN RSUD AROSUKA</h1>
-          <a href="../kuesioner/biodata.html" class="btn btn-primary">Mulai</a>
+          <h2 class="title">
+            KELOLA PERTANYAAN UNTUK MENILAI TINGKAT KEPUASAN PASIEN
+          </h2>
+          <a href="./pertanyaan/kelola-pertanyaan.html" class="btn btn-primary"
+            >Kelola Pertanyaan</a
+          >
         </div>
         <div class="card-slider">
           <a
