--- a/pages/admin/pertanyaan/edit-pertanyaan.html
+++ b/pages/admin/pertanyaan/edit-pertanyaan.html
@@ -62,6 +62,25 @@
 Seberapa puas Anda dengan kualitas pelayanan yang diberikan? </textarea
                       >
                     </div>
+                    <div class="form-group">
+                      <label for="kategori" class="mb-2"
+                        >Kategori Pertanyaan</label
+                      >
+                      <select class="form-select" id="kategori" required>
+                        <option value="" disabled>
+                          -- Pilih Kategori Pertanyaan --
+                        </option>
+                        <option value="Keandalan  (Reliability)" selected>
+                          Keandalan (Reliability)
+                        </option>
+                        <option value="Daya Tanggap (Responsiveness)">
+                          Daya Tanggap (Responsiveness)
+                        </option>
+                        <option value="Jaminan (Assurance)">
+                          Jaminan (Assurance)
+                        </option>
+                      </select>
+                    </div>
                   </div>
                 </div>
 
