--- a/pages/admin/print/responden-puas.html
+++ b/pages/admin/print/responden-puas.html
@@ -55,7 +55,7 @@
                 <tr>
                   <th rowspan="2">#</th>
                   <th rowspan="2" class="col-md-2 col-xs-2">Nama Lengkap</th>
-                  <th colspan="6" class="col-md-8 col-xs-8">Pertanyaan</th>
+                  <th colspan="10" class="col-md-8 col-xs-8">Pertanyaan</th>
                   <th rowspan="2" class="col-md-2 col-xs-2">Kepuasan</th>
                 </tr>
                 <tr>
@@ -65,6 +65,10 @@
                   <th>4</th>
                   <th>5</th>
                   <th>6</th>
+                  <th>7</th>
+                  <th>8</th>
+                  <th>9</th>
+                  <th>10</th>
                 </tr>
                 <tr class="warning no-result">
                   <td colspan="4">
@@ -75,9 +79,13 @@
               <tbody>
                 <tr>
                   <th scope="row">1</th>
-                  <td class="col-md-2 col-xs-2">Alif Suryadai</td>
+                  <td class="col-md-2 col-xs-2">Alif Suryadi</td>
                   <td>80</td>
                   <td>90</td>
+                  <td>85</td>
+                  <td>100</td>
+                  <td>75</td>
+                  <td>95</td>
                   <td>85</td>
                   <td>100</td>
                   <td>75</td>
@@ -94,6 +102,10 @@
                   <td>100</td>
                   <td>75</td>
                   <td>95</td>
+                  <td>85</td>
+                  <td>100</td>
+                  <td>75</td>
+                  <td>95</td>
                   <td class="col-md-2 col-xs-2">Puas</td>
                 </tr>
                 <tr>
@@ -101,6 +113,10 @@
                   <td class="col-md-2 col-xs-2">Jane Smith</td>
                   <td>80</td>
                   <td>90</td>
+                  <td>85</td>
+                  <td>100</td>
+                  <td>100</td>
+                  <td>100</td>
                   <td>85</td>
                   <td>100</td>
                   <td>100</td>
@@ -116,6 +132,10 @@
                   <td>80</td>
                   <td>75</td>
                   <td>95</td>
+                  <td>100</td>
+                  <td>80</td>
+                  <td>75</td>
+                  <td>95</td>
                   <td class="col-md-2 col-xs-2">Puas</td>
                 </tr>
                 <tr>
@@ -127,6 +147,10 @@
                   <td>70</td>
                   <td>75</td>
                   <td>95</td>
+                  <td>85</td>
+                  <td>70</td>
+                  <td>75</td>
+                  <td>95</td>
                   <td class="col-md-2 col-xs-2">Puas</td>
                 </tr>
                 <tr>
@@ -134,6 +158,10 @@
                   <td class="col-md-2 col-xs-2">David Brown</td>
                   <td>80</td>
                   <td>90</td>
+                  <td>85</td>
+                  <td>90</td>
+                  <td>90</td>
+                  <td>80</td>
                   <td>85</td>
                   <td>90</td>
                   <td>90</td>
