--- a/pages/admin/print/responden-tidak-puas.html
+++ b/pages/admin/print/responden-tidak-puas.html
@@ -57,7 +57,7 @@
                 <tr>
                   <th rowspan="2">#</th>
                   <th rowspan="2" class="col-md-2 col-xs-2">Nama Lengkap</th>
-                  <th colspan="6" class="col-md-8 col-xs-8">Pertanyaan</th>
+                  <th colspan="10" class="col-md-8 col-xs-8">Pertanyaan</th>
                   <th rowspan="2" class="col-md-2 col-xs-2">Kepuasan</th>
                 </tr>
                 <tr>
@@ -67,6 +67,10 @@
                   <th>4</th>
                   <th>5</th>
                   <th>6</th>
+                  <th>7</th>
+                  <th>8</th>
+                  <th>9</th>
+                  <th>10</th>
                 </tr>
                 <tr class="warning no-result">
                   <td colspan="4">
@@ -77,9 +81,13 @@
               <tbody>
                 <tr>
                   <th scope="row">1</th>
-                  <td class="col-md-2 col-xs-2">Alif Suryadai</td>
+                  <td class="col-md-2 col-xs-2">Alif Suryadi</td>
                   <td>40</td>
                   <td>50</td>
+                  <td>85</td>
+                  <td>60</td>
+                  <td>75</td>
+                  <td>45</td>
                   <td>85</td>
                   <td>60</td>
                   <td>75</td>
@@ -96,6 +104,10 @@
                   <td>60</td>
                   <td>75</td>
                   <td>45</td>
+                  <td>85</td>
+                  <td>60</td>
+                  <td>75</td>
+                  <td>45</td>
                   <td class="col-md-2 col-xs-2">Tidak Puas</td>
                 </tr>
                 <tr>
@@ -103,6 +115,10 @@
                   <td class="col-md-2 col-xs-2">Jane Smith</td>
                   <td>40</td>
                   <td>50</td>
+                  <td>85</td>
+                  <td>60</td>
+                  <td>60</td>
+                  <td>60</td>
                   <td>85</td>
                   <td>60</td>
                   <td>60</td>
@@ -118,6 +134,10 @@
                   <td>40</td>
                   <td>75</td>
                   <td>45</td>
+                  <td>60</td>
+                  <td>40</td>
+                  <td>75</td>
+                  <td>45</td>
                   <td class="col-md-2 col-xs-2">Tidak Puas</td>
                 </tr>
                 <tr>
@@ -129,6 +149,10 @@
                   <td>70</td>
                   <td>75</td>
                   <td>45</td>
+                  <td>85</td>
+                  <td>70</td>
+                  <td>75</td>
+                  <td>45</td>
                   <td class="col-md-2 col-xs-2">Tidak Puas</td>
                 </tr>
                 <tr>
@@ -136,6 +160,10 @@
                   <td class="col-md-2 col-xs-2">David Brown</td>
                   <td>40</td>
                   <td>50</td>
+                  <td>85</td>
+                  <td>50</td>
+                  <td>50</td>
+                  <td>40</td>
                   <td>85</td>
                   <td>50</td>
                   <td>50</td>
