--- a/pages/admin/tentang-kami.html
+++ b/pages/admin/tentang-kami.html
@@ -66,6 +66,11 @@
                 >
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="./kelola-pertanyaan.html"
+                  >Pertanyaan</a
+                >
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="./pengujian.html">Pengujian</a>
               </li>
               <li class="nav-item">
