--- a/pages/kuesioner/biodata.html
+++ b/pages/kuesioner/biodata.html
@@ -97,7 +97,7 @@
                             >
                             <select class="form-select" id="gender" required>
                               <option value="" disabled selected>
-                                Pilih jenis kelamin
+                                -- Pilih jenis kelamin --
                               </option>
                               <option value="Laki-laki">Laki-laki</option>
                               <option value="Perempuan">Perempuan</option>
